# Proyecto-2-ImageRecovery-RentACar

./: .gitignore  Image_Recovery.files  Image_Recovery.includes  README.md
Image Recovery/: App.cpp  App.h  CMakeLists.txt  ImageOperations.cpp  ImageOperations.h  MyApplication.cpp  MyApplication.h  main.cpp
Image Recovery/genetic_algorithm/: Genetics.cpp  Genetics.h  ImageCompleter.cpp  ImageCompleter.h  Individual.cpp  Individual.h  Population.cpp  Population.h
Image Recovery/image_loader/: ImageLoader.cpp  ImageLoader.h
Rent A Car/: CMakeLists.txt  Graph.cpp  Graph.h  main.cpp
Rent A Car/Interfaz/: Calle.cpp  Calle.h  Ciudad.cpp  Ciudad.h  Ventana.cpp  Ventana.h
